test/e2e/testdata/zone-aware-routing-backendref-enabled.yaml
apiVersion: v1
kind: Service
metadata:
  name: topology-aware-routing
  namespace: gateway-conformance-infra
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    app: zone-aware-backend
  ports:
    - protocol: TCP
      port: 8080
      name: http11
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: topology-aware-routing
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /topology-aware-routing
      backendRefs:
        - name: topology-aware-routing
          port: 8080
          weight: 1
